--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=9090
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_project
+server.port=5050
+spring.datasource.url=jdbc:mysql://localhost:3306/blogify
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,7 +13,8 @@ spring.servlet.multipart.max-request-size=10MB
 project.image=images/
 
 logging.level.org.springframework.security=DEBUG
+management.endpoints.web.exposure.include=beans
 
-spring.security.user.name=arpit
-spring.security.user.password=password
-spring.security.user.roles=ADMIN
+#spring.security.user.name=arpit
+#spring.security.user.password=password
+#spring.security.user.roles=ADMIN
