--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 project.image=images/
+logging.level.org.springdoc=DEBUG
 
 logging.level.org.springframework.security=DEBUG
 management.endpoints.web.exposure.include=beans
