--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 server.port=5050
-spring.datasource.url=jdbc:mysql://localhost:3306/blogify
-spring.datasource.username=root
-spring.datasource.password=12345
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
@@ -15,6 +12,8 @@ logging.level.org.springdoc=DEBUG
 
 logging.level.org.springframework.security=DEBUG
 management.endpoints.web.exposure.include=beans
+
+spring.profiles.active=prod
 
 #spring.security.user.name=arpit
 #spring.security.user.password=password
